--- a/grafana-influxdb-harvest/Dockerfile
+++ b/grafana-influxdb-harvest/Dockerfile
@@ -19,4 +19,4 @@ RUN dpkg -i netapp-harvest_*_all.deb
 RUN unzip -j netapp-manageability-sdk-*.zip netapp-manageability-sdk-*/lib/perl/NetApp/* -d /opt/netapp-harvest/lib
 
 COPY entrypoint.sh /
-ENTRYPOINT ["/entrypoint.sh"]
+#ENTRYPOINT ["/entrypoint.sh"]
