--- a/grafana-influxdb-harvest/netapp-harvest.conf
+++ b/grafana-influxdb-harvest/netapp-harvest.conf
@@ -1,10 +1,10 @@
 [global]
-# You will need to do this post install of grafana
+# You will need to do this post install
 #grafana_api_key   = CHANGE_GRAFANA_API_KEY
 #grafana_url       = http://grafana:3000
 
 [default]
-graphite_server   = CHANGE_GRAPHITE_OR_INFLUXDB_SERVER
+graphite_server   = influxdb
 host_type	  = FILER
 # Filer auth
 username          = CHANGE_FILER_USER
@@ -12,13 +12,13 @@ password          = CHANGE_FILER_PASSWORD
 
 # Filers go here
 #[FILER_NAM]
-#hostname        = CHANGE_IP_OR_HOSTNAME_OF_FILER
+#hostname        = CHANGE_IP_OR_HOSTNAME
 #group           = CHANGE_GROUP
 
 # OCUM go here
 #[INSERT_OCUM_SERVER_NAME_HERE]
-# hostname          = CHANGE_IP_OR_HOSTNAME_OF_OCUM_SERVER
-# site              = CHANGE_SITE_IDENTIFIER
+# hostname          = INSERT_IP_ADDRESS_OR_HOSTNAME_OF_OCUM_SERVER
+# site              = INSERT_SITE_IDENTIFIER_HERE
 # host_type         = OCUM
 # data_update_freq  = 900
 # normalized_xfer   = gb_per_sec
