--- a/netapp-harvest/docker-compose.yml
+++ b/netapp-harvest/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   harvest:
-    image: harvest
+    image: szukalski/netapp-harvest
       volumes:
        - ./netapp-harvest.conf:/opt/netapp-harvest/netapp-harvest.conf
 
