--- a/grafana-influxdb-harvest/docker-compose.yml
+++ b/grafana-influxdb-harvest/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   harvest:
-    image: szukalski/harvest
+    image: szukalski/netapp-harvest
     volumes:
       - data:/opt/netapp-harvest
       - ./netapp-harvest.conf:/opt/netapp-harvest/netapp-harvest.conf
