--- a/netapp-harvest/Dockerfile
+++ b/netapp-harvest/Dockerfile
@@ -15,8 +15,10 @@ RUN apt-get update && apt-get install -y \
 COPY netapp-harvest_*_all.deb /
 COPY netapp-manageability-sdk-*.zip /
 
-RUN dpkg -i netapp-harvest_*_all.deb
-RUN unzip -j netapp-manageability-sdk-*.zip netapp-manageability-sdk-*/lib/perl/NetApp/* -d /opt/netapp-harvest/lib
+RUN dpkg -i netapp-harvest_*_all.deb \
+	&& unzip -j netapp-manageability-sdk-*.zip netapp-manageability-sdk-*/lib/perl/NetApp/* -d /opt/netapp-harvest/lib \
+	&& rm /netapp-harvest_*_all.deb \
+	&& rm /netapp-manageability-sdk-*.zip
 
 COPY entrypoint.sh /
 ENTRYPOINT ["/entrypoint.sh"]
