--- a/grafana-influxdb-harvest/netapp-harvest.conf
+++ b/grafana-influxdb-harvest/netapp-harvest.conf
@@ -1,7 +1,7 @@
 [global]
-# You will need to do this post install
-#grafana_api_key   = CHANGE_GRAFANA_API_KEY
-#grafana_url       = http://grafana:3000
+# This is done during the run.sh process
+grafana_api_key   = CHANGE_GRAFANA_API_KEY
+grafana_url       = http://grafana:3000
 
 [default]
 graphite_server   = influxdb
