--- a/grav/Dockerfile
+++ b/grav/Dockerfile
@@ -1,11 +1,34 @@
-FROM nginx:latest
-MAINTAINER David James <szukalski@gmail.com>
+FROM php:7.0-apache
 
-RUN apt-get update \
-	&& apt-get install -y \
-	zip unzip git php7.0-fpm php7.0-cli php7.0-gd php7.0-curl php7.0-mbstring php7.0-xml php7.0-zip php-apcu\
-	--no-install-recommends \
-	&& rm -rf /var/lib/apt/lists/*
+# Based on the official Wordpress docker file
 
-RUN sed -i "s/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/" /etc/php/7.0/fpm/php.ini
+RUN a2enmod rewrite expires
 
+# install the PHP extensions we need
+RUN apt-get update && apt-get install -y git libpng12-dev libjpeg-dev zlib1g-dev && rm -rf /var/lib/apt/lists/* \
+	&& docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
+	&& docker-php-ext-install gd mysqli opcache zip mbstring
+
+# set recommended PHP.ini settings
+# see https://secure.php.net/manual/en/opcache.installation.php
+RUN { \
+		echo 'opcache.memory_consumption=128'; \
+		echo 'opcache.interned_strings_buffer=8'; \
+		echo 'opcache.max_accelerated_files=4000'; \
+		echo 'opcache.revalidate_freq=60'; \
+		echo 'opcache.fast_shutdown=1'; \
+		echo 'opcache.enable_cli=1'; \
+	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
+
+ENV GRAV_VERSION 1.1.16
+RUN curl -o grav.tar.gz -SL https://github.com/getgrav/grav/archive/${GRAV_VERSION}.tar.gz \
+	&& mkdir -p /tmp/grav \
+	&& tar -xzf grav.tar.gz -C /tmp \
+	&& rsync -a /tmp/grav-${GRAV_VERSION}/ /var/www/html --exclude user \
+	&& /var/www/html/bin/grav install \
+	&& chown -R www-data:www-data /var/www/html
+
+COPY docker-entrypoint.sh /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["apache2-foreground"]
