--- a/grav/Dockerfile
+++ b/grav/Dockerfile
@@ -1,34 +1,28 @@
-FROM php:7.0-apache
+FROM alpine:3.3
 
-# Based on the official Wordpress docker file
+#Install grav into /www folder
+RUN apk --update add nginx php-fpm wget curl git zip unzip php php-curl php-zip php-openssl php-json php-phar php-dom php-gd php-ctype php-xml && \
+    rm /var/cache/apk/* && \
+    curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer && \
+    mkdir /www && cd /www && \
+    git clone -b master https://github.com/getgrav/grav.git . && \
+    bin/grav install && \
+    bin/gpm install admin -y && \
+    bin/gpm install git-sync -y && \
+    chown -R nobody . && chown -R nobody * && \
+    find . -type f | xargs chmod 664 && \
+    find ./bin -type f | xargs chmod 775 && \
+    find . -type d | xargs chmod 775 && \
+    find . -type d | xargs chmod +s && \
+    umask 0002 && \
+    mkdir -p /var/log/nginx && \
+    touch /var/log/nginx/access.log && \
+    mkdir -p /tmp/nginx && \
+    echo "clear_env = no" >> /etc/php/php-fpm.conf
 
-RUN a2enmod rewrite expires
+#Add nginx and php-fpm configuration
+ADD etc /etc
+EXPOSE 80
 
-# install the PHP extensions we need
-RUN apt-get update && apt-get install -y git libpng12-dev libjpeg-dev zlib1g-dev && rm -rf /var/lib/apt/lists/* \
-	&& docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
-	&& docker-php-ext-install gd mysqli opcache zip mbstring
-
-# set recommended PHP.ini settings
-# see https://secure.php.net/manual/en/opcache.installation.php
-RUN { \
-		echo 'opcache.memory_consumption=128'; \
-		echo 'opcache.interned_strings_buffer=8'; \
-		echo 'opcache.max_accelerated_files=4000'; \
-		echo 'opcache.revalidate_freq=60'; \
-		echo 'opcache.fast_shutdown=1'; \
-		echo 'opcache.enable_cli=1'; \
-	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
-
-ENV GRAV_VERSION 1.1.16
-RUN curl -o grav.tar.gz -SL https://github.com/getgrav/grav/archive/${GRAV_VERSION}.tar.gz \
-	&& mkdir -p /tmp/grav \
-	&& tar -xzf grav.tar.gz -C /tmp \
-	&& rsync -a /tmp/grav-${GRAV_VERSION}/ /var/www/html --exclude user \
-	&& /var/www/html/bin/grav install \
-	&& chown -R www-data:www-data /var/www/html
-
-COPY docker-entrypoint.sh /entrypoint.sh
-
-ENTRYPOINT ["/entrypoint.sh"]
-CMD ["apache2-foreground"]
+#Start nginx and php-fpm
+CMD php-fpm -d variables_order="EGPCS" && (tail -F /var/log/nginx/access.log &) && exec nginx -g "daemon off;"
