--- a/downer/docker-compose.yml
+++ b/downer/docker-compose.yml
@@ -31,7 +31,25 @@ services:
       - VIRTUAL_PORT=80
     volumes: 
       - ${DIR}/rutorrent/config:/config
-
+      - ${DIR}/downloads:/downloads
+    
+  radarr:
+    restart: always
+    container_name: radarr
+    image: linuxserver/radarr
+    networks: 
+      - downer
+    environment: 
+      - TZ=${TZ}
+      - PUID=${UID}
+      - PGID=${GID}
+      - VIRTUAL_HOST=radarr.home
+      - VIRTUAL_PORT=7878
+    volumes: 
+      - /etc/localtime:/etc/localtime:ro
+      - ${DIR}/radarr/config:/config
+      - ${DIR}/downloads:/downloads
+      - ${DIR}/movies:/movies
 
 networks: 
   downer:
