--- a/downer/docker-compose.yml
+++ b/downer/docker-compose.yml
@@ -87,17 +87,44 @@ services:
       - ${DIR}/downloads:/downloads
 
   portainer:
-      restart: always
-      container_name: portainer
-      image: portainer/portainer
-      networks: 
-        - downer
-      environment: 
-        - VIRTUAL_HOST=portainer.home
-        - VIRTUAL_PORT=9000
-      volumes: 
-        - /docker/containers/portainer/config:/data
-        - /var/run/docker.sock:/var/run/docker.sock
+    restart: always
+    container_name: portainer
+    image: portainer/portainer
+    networks: 
+      - downer
+    environment: 
+      - VIRTUAL_HOST=portainer.home
+      - VIRTUAL_PORT=9000
+    volumes: 
+      - /docker/containers/portainer/config:/data
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  cadvisor:
+    restart: always
+    container_name: cadvisor
+    image: google/cadvisor
+    networks: 
+      - downer
+    environment: 
+      - VIRTUAL_HOST=cadvisor.home
+      - VIRTUAL_PORT=8080
+    volumes: 
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+
+  muximux:
+    restart: always
+    container_name: muximux
+    image: linuxserver/muximux
+    networks: 
+      - downer
+    environment: 
+      - VIRTUAL_HOST=muximux.home
+      - VIRTUAL_PORT=80
+    volumes: 
+      - ${DIR}/muximux/config:/config
 
 networks: 
   downer:
